--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.25-incubating</version>
+        </dependency>
+	    <dependency>
+		    <groupId>com.sparkjava</groupId>
+		    <artifactId>spark-core</artifactId>
+		    <version>2.5</version>
+	    </dependency>    
+	    <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <version>2.2.0</version>
@@ -71,7 +81,6 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.1.1</version>
-        <!--<scope>test</scope>-->
     </dependency>
         <dependency>
             <groupId>net.sf.supercsv</groupId>
