--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,31 @@
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
+
+	<plugin>
+	<artifactId>maven-assembly-plugin</artifactId>
+	<executions>
+	<execution>
+	<phase>package</phase>
+	<goals>
+	<goal>single</goal>
+	</goals>
+	</execution>
+	</executions>
+	<configuration>
+	<descriptorRefs>
+	<!-- This tells Maven to include all dependencies -->
+	<descriptorRef>jar-with-dependencies</descriptorRef>
+	</descriptorRefs>
+	<archive>
+	<manifest>
+	<mainClass>main.java.com.rk.jsonvaluefetcher.JSONValueFetcher</mainClass>
+	</manifest>
+	</archive>
+	</configuration>
+	</plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
